options: add compatibility flag

--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,20 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-08 Tue 09:05]
+#+CAPTION: Clock summary at [2017-08-17 Thu 10:32]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:06* |       |      | 100.0 |
+| *Total time*                                                                | *18:12* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:06   |       |      | 100.0 |
-| Active                                                                      |         | 15:06 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   3.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:25 |   2.8 |
-| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  42.2 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  18.8 |
-| STARTED Create an exogenous model                                           |         |       | 3:44 |  24.7 |
-| STARTED Remove support for upsilon                                          |         |       | 1:10 |   7.7 |
+| Stories                                                                     | 18:12   |       |      | 100.0 |
+| Active                                                                      |         | 18:12 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   3.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:25 |   2.3 |
+| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  35.0 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  15.6 |
+| COMPLETED Remove support for upsilon                                        |         |       | 1:10 |   6.4 |
+| STARTED Create an exogenous model                                           |         |       | 6:33 |  36.0 |
+| STARTED Add a backwards compatible flag                                     |         |       | 0:17 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -212,7 +213,8 @@ Steps:
 - process element annotation.
 - process attribute annotations, if stateful.
 
-*** Add a backwards compatible flag                                   :story:
+*** STARTED Add a backwards compatible flag                           :story:
+    CLOCK: [2017-08-17 Thu 10:15]--[2017-08-17 Thu 10:32] =>  0:17
 
 Backwards compatibility is a problem; we should be able to ignore
 types that do not exist. This could be achieved by adding a "backwards
