--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-17 Thu 14:37]
+#+CAPTION: Clock summary at [2017-08-18 Fri 00:15]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:22* |       |      | 100.0 |
+| *Total time*                                                                | *21:05* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:22   |       |      | 100.0 |
-| Active                                                                      |         | 19:22 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   3.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:25 |   2.2 |
-| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  32.9 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  14.6 |
-| COMPLETED Remove support for upsilon                                        |         |       | 1:10 |   6.0 |
-| COMPLETED Add a backwards compatible flag                                   |         |       | 1:27 |   7.5 |
-| STARTED Create an exogenous model                                           |         |       | 6:33 |  33.8 |
+| Stories                                                                     | 21:05   |       |      | 100.0 |
+| Active                                                                      |         | 21:05 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   2.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:25 |   2.0 |
+| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  30.2 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  13.4 |
+| COMPLETED Remove support for upsilon                                        |         |       | 1:10 |   5.5 |
+| COMPLETED Add a backwards compatible flag                                   |         |       | 1:27 |   6.9 |
+| STARTED Create an exogenous model                                           |         |       | 8:16 |  39.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,10 @@ for the common use case, but can override when required. Log can
 suggest this command line option, with a warning.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-08-17 Thu 23:46]--[2017-08-18 Fri 00:15] =>  0:29
+    CLOCK: [2017-08-17 Thu 20:45]--[2017-08-17 Thu 21:08] =>  0:23
+    CLOCK: [2017-08-17 Thu 17:33]--[2017-08-17 Thu 17:54] =>  0:21
+    CLOCK: [2017-08-17 Thu 16:45]--[2017-08-17 Thu 17:15] =>  0:30
     CLOCK: [2017-08-17 Thu 09:43]--[2017-08-17 Thu 09:44] =>  0:01
     CLOCK: [2017-08-16 Wed 22:20]--[2017-08-16 Wed 23:30] =>  1:10
     CLOCK: [2017-08-16 Wed 20:49]--[2017-08-16 Wed 21:41] =>  0:52
@@ -227,6 +231,27 @@ Steps:
 - convert scribble group into annotation group.
 - process element annotation.
 - process attribute annotations, if stateful.
+
+*** Add support for field renaming in annotations                     :story:
+
+At present if a field changes its name between dogen releases,
+diagrams stop working. For example, we renamed:
+
+: yarn.dia.external_modules
+
+to
+
+: yarn.external_modules
+
+With this change, dogen stopped working. We need some way to
+"remember" the previous name before a rename so that previous versions
+still work.
+
+*** =Nameable= concept moved position on code generation              :story:
+
+During the exogenous model work, yarn's =Nameable= concept moved
+position. We need to look at how the parent changes were done to see
+if they are stable or not.
 
 *** Model naming                                                      :story:
 
