--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,21 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-20 Sun 10:49]
+#+CAPTION: Clock summary at [2017-08-20 Sun 21:22]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *24:42* |       |       | 100.0 |
+| *Total time*                                                                | *25:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 24:42   |       |       | 100.0 |
-| Active                                                                      |         | 24:42 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.4 |
+| Stories                                                                     | 25:01   |       |       | 100.0 |
+| Active                                                                      |         | 25:01 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   2.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:25 |   1.7 |
-| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  25.8 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |  11.5 |
+| COMPLETED Use shared pointers in all models                                 |         |       |  6:22 |  25.4 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       |  2:50 |  11.3 |
 | COMPLETED Remove support for upsilon                                        |         |       |  1:10 |   4.7 |
-| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   5.9 |
-| STARTED Create an exogenous model                                           |         |       | 11:53 |  48.1 |
+| COMPLETED Add a backwards compatible flag                                   |         |       |  1:27 |   5.8 |
+| STARTED Create an exogenous model                                           |         |       | 12:12 |  48.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -158,6 +158,7 @@ for the common use case, but can override when required. Log can
 suggest this command line option, with a warning.
 
 *** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-08-20 Sun 21:02]--[2017-08-20 Sun 21:21] =>  0:19
     CLOCK: [2017-08-20 Sun 10:45]--[2017-08-20 Sun 10:48] =>  0:03
     CLOCK: [2017-08-20 Sun 10:12]--[2017-08-20 Sun 10:44] =>  0:32
     CLOCK: [2017-08-18 Fri 16:48]--[2017-08-18 Fri 16:57] =>  0:09
